# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import(
    "//foundation/communication/dsoftbus/adapter/common/net/bluetooth/net_bluetooth.gni")
import("//foundation/communication/dsoftbus/dsoftbus.gni")

br_adapter_src =
    [ "$dsoftbus_root_path/core/adapter/br/mock/wrapper_br_interface.c" ]

br_adapter_inc = [
  "$dsoftbus_root_path/core/adapter/br/include",
  "//foundation/communication/bluetooth/interfaces/innerkits/native_c/include",
]

declare_args() {
  dsoftbus_standard_get_devicename = true
}

aainnerkits_path = "//foundation/ability/ability_runtime/interfaces/inner_api"
aaservices_path = "//foundation/ability/ability_runtime/services"
aakits_path = "//foundation/ability/ability_runtime/frameworks/kits"

if (defined(ohos_lite)) {
  bus_center_core_adapter_src = [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]

  bus_center_core_adapter_inc =
      [ "$dsoftbus_root_path/core/adapter/bus_center/include" ]

  bus_center_core_adapter_deps = []
} else {
  if (dsoftbus_standard_get_devicename == false) {
    bus_center_core_adapter_src = [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]

    bus_center_core_adapter_inc =
        [ "$dsoftbus_root_path/core/adapter/bus_center/include" ]

    bus_center_core_adapter_deps = []
  } else {
    bus_center_core_adapter_src = [
      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor.cpp",
      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_ohos_account.cpp",
    ]

    bus_center_core_adapter_inc = [
      "$dsoftbus_root_path/adapter/common/bus_center/include",
      "$dsoftbus_root_path/core/adapter/bus_center/include",
      "${aafwk_kits_path}/ability/native/include",
      "${aafwk_inner_api_path}/want/include/ohos/aafwk/content",
      "//foundation/distributeddatamgr/appdatamgr/relational_store/interfaces/inner_api/rdb/include",
      "//foundation/distributeddatamgr/appdatamgr/relational_store/interfaces/inner_api/dataability/include",
      "${aafwk_inner_api_path}/dataobs_manager/include",
      "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include/",
    ]

    bus_center_core_adapter_deps = [
      "${aafwk_inner_api_path}/dataobs_manager:dataobs_manager",
      "${aafwk_kits_path}/ability/native:abilitykit_native",
      "${ability_base_path}:want",
      "${ability_base_path}:zuri",
      "//base/account/os_account/frameworks/ohosaccount/native:libaccountkits",
      "//base/account/os_account/frameworks/osaccount/native:os_account_innerkits",
      "//foundation/distributeddatamgr/appdatamgr/relational_store/interfaces/inner_api/dataability:native_dataability",
      "//foundation/distributeddatamgr/appdatamgr/relational_store/interfaces/inner_api/rdb:native_rdb",
    ]
  }
}
