# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import(
    "//foundation/communication/dsoftbus/adapter/common/net/bluetooth/net_bluetooth.gni")
import("//foundation/communication/dsoftbus/dsoftbus.gni")

br_adapter_src =
    [ "$dsoftbus_root_path/core/adapter/br/mock/wrapper_br_interface.c" ]

br_adapter_inc = [
  "$dsoftbus_root_path/core/adapter/br/include",
  "//foundation/communication/bluetooth/interfaces/innerkits/native_c/include",
]


bus_center_core_adapter_src =
    [ "$dsoftbus_root_path/core/adapter/bus_center/src/bus_center_adapter.c" ]

bus_center_core_adapter_inc = [
  "$dsoftbus_root_path/adapter/common/include",
  "//base/startup/init/interfaces/innerkits/include/syspara",
]

bus_center_core_adapter_deps =
    [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]

if (defined(ohos_lite)) {
  bus_center_core_adapter_src += [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]

  bus_center_core_adapter_inc += [
    "$dsoftbus_root_path/core/adapter/bus_center/include",
    "$dsoftbus_root_path/core/bus_center/utils/include",
  ]

  bus_center_core_adapter_deps += []
} else {
  if (dsoftbus_get_devicename == false) {
    bus_center_core_adapter_src += [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]

    bus_center_core_adapter_inc +=
        [ "$dsoftbus_root_path/core/adapter/bus_center/include" ]

    bus_center_core_adapter_deps += []
  } else {
    bus_center_core_adapter_src += [
      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor.cpp",
      "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_ohos_account.cpp",
    ]

    bus_center_core_adapter_inc += [
      "$dsoftbus_root_path/adapter/common/bus_center/include",
      "$dsoftbus_root_path/core/adapter/bus_center/include",
      "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb/include",
      "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/dataability/include",
      "//base/account/os_account/interfaces/innerkits/ohosaccount/native/include/",
    ]

    bus_center_core_adapter_deps += [
      "${ability_base_path}:want",
      "${ability_base_path}:zuri",
      "${ability_runtime_inner_api_path}/dataobs_manager:dataobs_manager",
      "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
      "//base/account/os_account/frameworks/ohosaccount/native:libaccountkits",
      "//base/account/os_account/frameworks/osaccount/native:os_account_innerkits",
      "//foundation/distributeddatamgr/data_share/interfaces/inner_api:datashare_consumer",
      "//foundation/distributeddatamgr/data_share/interfaces/inner_api/common:datashare_common",
      "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/dataability:native_dataability",
      "//foundation/distributeddatamgr/relational_store/interfaces/inner_api/rdb:native_rdb",
    ]
  }
}
