# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/communication/dsoftbus/dsoftbus.gni")

config("auth_server_interface") {
  include_dirs = [
    "include",
    "interface",
  ]
}

common_src = [
  "src/auth_common.c",
  "src/auth_connection.c",
  "src/auth_manager.c",
  "src/auth_sessionkey.c",
  "src/auth_socket.c",
]

if (enable_auth_account == true) {
  defines = [ "AUTH_ACCOUNT" ]
}

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")

  shared_library("dsoftbus_auth_server") {
    sources = common_src
    include_dirs = [
      "$softbus_adapter_common/include",
      "$dsoftbus_root_path/core/bus_center/interface",
      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
      "$dsoftbus_root_path/core/bus_center/utils/include",
      "$dsoftbus_root_path/core/common/include",
      "$dsoftbus_root_path/core/common/message_handler/include",
      "$dsoftbus_root_path/core/connection/manager",
      "$dsoftbus_root_path/core/connection/interface",
      "$dsoftbus_root_path/interfaces/kits/bus_center",
      "$dsoftbus_root_path/interfaces/kits/common",
      "$dsoftbus_root_path/core/common/softbus_property/include",
      "$softbus_adapter_config/spec_config",
      "$hilog_lite_include_path",
      "//base/security/deviceauth/interfaces/innerkits",
      "//third_party/bounds_checking_function/include",
      "//third_party/cJSON",
    ]
    cflags = [
      "-Wall",
      "-fPIC",
    ]
    public_configs = [ ":auth_server_interface" ]
    deps = [
      "$dsoftbus_root_path/adapter:softbus_adapter",
      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
      "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
      "$dsoftbus_root_path/core/common/json_utils:json_utils",
      "$dsoftbus_root_path/core/common/log:softbus_log",
      "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
      "$dsoftbus_root_path/core/common/utils:softbus_utils",
      "$dsoftbus_root_path/core/connection/tcp:tcp_connection",
      "$hilog_lite_deps_path",
      "//base/security/deviceauth/services:deviceauth_sdk",
      "//third_party/bounds_checking_function:libsec_shared",
    ]
  }
} else {
  import("//build/ohos.gni")

  ohos_shared_library("dsoftbus_auth_server") {
    sources = common_src
    include_dirs = [
      "$softbus_adapter_common/include",
      "$dsoftbus_root_path/core/bus_center/interface",
      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
      "$dsoftbus_root_path/core/bus_center/utils/include",
      "$dsoftbus_root_path/core/common/include",
      "$dsoftbus_root_path/core/common/message_handler/include",
      "$dsoftbus_root_path/core/connection/manager",
      "$dsoftbus_root_path/core/connection/interface",
      "$dsoftbus_root_path/interfaces/kits/bus_center",
      "$dsoftbus_root_path/interfaces/kits/common",
      "$dsoftbus_root_path/core/common/softbus_property/include",
      "$softbus_adapter_config/spec_config",
      "//base/security/deviceauth/interfaces/innerkits",
      "//third_party/cJSON",
    ]
    public_configs = [ ":auth_server_interface" ]
    deps = [
      "$dsoftbus_root_path/adapter:softbus_adapter",
      "$dsoftbus_root_path/core/bus_center/lnn/net_ledger:dsoftbus_bus_center_ledger",
      "$dsoftbus_root_path/core/bus_center/utils:dsoftbus_bus_center_utils",
      "$dsoftbus_root_path/core/common/json_utils:json_utils",
      "$dsoftbus_root_path/core/common/log:softbus_log",
      "$dsoftbus_root_path/core/common/message_handler",
      "$dsoftbus_root_path/core/common/softbus_property:softbus_property",
      "$dsoftbus_root_path/core/common/utils:softbus_utils",
      "$dsoftbus_root_path/core/connection/common:conn_common",
      "$dsoftbus_root_path/core/connection/manager:conn_manager",
    ]
    if (is_standard_system) {
      external_deps = [
        "deviceauth_standard:deviceauth_sdk",
        "hiviewdfx_hilog_native:libhilog",
      ]
    }
    part_name = "dsoftbus_standard"
    subsystem_name = "communication"
  }
}
