# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../dsoftbus.gni")

AUTH_SERVER_DEFINES = []
if (dsoftbus_feature_auth_account == true) {
  AUTH_SERVER_DEFINES += [ "AUTH_ACCOUNT" ]
}

authentication_path = "$dsoftbus_root_path/core/authentication"
native_source_path = rebase_path("$dsoftbus_root_path")

auth_server_inc = [
  "$dsoftbus_dfx_path/interface/include",
  "$dsoftbus_root_path/interfaces/kits/adapter",
  "$dsoftbus_root_path/interfaces/kits/authentication",
  "$dsoftbus_root_path/core/authentication/include",
  "$dsoftbus_root_path/core/adapter/authentication/include",
  "$dsoftbus_root_path/interfaces/kits/lnn",
  "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
  "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
  "$dsoftbus_root_path/core/adapter/bus_center/include",
  "$dsoftbus_root_path/core/bus_center/utils/include/",
  "$dsoftbus_root_path/interfaces/kits/transport",
]
if (dsoftbus_feature_lnn_frame) {
  auth_server_src = [
    "$authentication_path/src/auth_common.c",
    "$authentication_path/src/auth_connection.c",
    "$authentication_path/src/auth_device.c",
    "$authentication_path/src/auth_hichain.c",
    "$authentication_path/src/auth_hichain_adapter.c",
    "$authentication_path/src/auth_manager.c",
    "$authentication_path/src/auth_normalize_request.c",
    "$authentication_path/src/auth_request.c",
    "$authentication_path/src/auth_session_fsm.c",
    "$authentication_path/src/auth_session_key.c",
    "$authentication_path/src/auth_session_json.c",
    "$authentication_path/src/auth_session_message.c",
    "$authentication_path/src/auth_interface.c",
    "$authentication_path/src/auth_pre_link.c",
    "$authentication_path/userkey/auth_uk_manager.c",
    "$authentication_path/userkey/auth_user_common_key.c",
  ]

  if (defined(ohos_lite)) {
    auth_server_src += [ "$authentication_path/src/virtual/auth_identity_service_adapter_virtual.c" ]
    AUTH_SERVER_DEFINES += [ "DISABLE_IDENTITY_SERVICE" ]
  } else {
    auth_server_src +=
        [ "$authentication_path/src/auth_identity_service_adapter.c" ]
  }

  if (dsoftbus_feature_ip_auth) {
    auth_server_src +=
        [ "$dsoftbus_root_path/core/authentication/src/auth_tcp_connection.c" ]
  } else {
    auth_server_src += [ "$dsoftbus_root_path/core/authentication/src/virtual/auth_tcp_connection_virtual.c" ]
  }

  if (dsoftbus_feature_lnn_d2d_auth) {
    auth_server_src += [
      "$authentication_path/applykey/auth_apply_key_manager.c",
      "$authentication_path/applykey/auth_apply_key_process.c",
    ]
  } else {
    auth_server_src +=
        [ "$authentication_path/applykey/auth_apply_key_virtual.c" ]
  }
} else {
  auth_server_src = [
    "$authentication_path/src/virtual/auth_interface_virtual.c",
    "$authentication_path/src/virtual/auth_tcp_connection_virtual.c",
  ]
}

auth_server_deps = [ "$dsoftbus_dfx_path:softbus_dfx" ]
auth_server_ex_deps = []
if (defined(ohos_lite)) {
  if (ohos_kernel_type == "liteos_m") {
    auth_server_inc += [ "//base/security/device_auth/interfaces/inner_api" ]
    if (dsoftbus_feature_lnn_frame) {
      auth_server_deps += [ "//base/security/device_auth/services:deviceauth" ]
    }
  } else {
    auth_server_inc += [ "//third_party/cJSON" ]
    if (dsoftbus_feature_lnn_frame) {
      auth_server_deps +=
          [ "//base/security/device_auth/services:deviceauth_sdk" ]
    }
  }
  auth_server_src += [ "$authentication_path/src/virtual/auth_hichain_system_ability_monitor_virtual.c" ]
} else {
  auth_server_ex_deps += [ "device_auth:deviceauth_sdk" ]
  auth_server_src +=
      [ "$authentication_path/src/auth_hichain_system_ability_monitor.cpp" ]
}

if (!defined(global_parts_info) ||
    defined(global_parts_info.deviceprofile_device_info_manager)) {
  auth_server_src += [
    "$authentication_path/bind/auth_device_profile_listener.cpp",
    "$authentication_path/src/auth_deviceprofile.cpp",
  ]
  auth_server_inc += [
    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
    "$dsoftbus_root_path/core/authentication/interface",
  ]
} else {
  auth_server_src += [
    "$authentication_path/bind/auth_device_profile_listener_virtual.cpp",
    "$authentication_path/src/auth_deviceprofile_virtual.cpp",
  ]
}
